# tauri-plugin-android-fix-font-size

./: Cargo.toml  README.md
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: FixFontSize.kt
android/src/test/java/: ExampleUnitTest.kt
permissions/autogenerated/: reference.md
src/: lib.rs
