[package]
name = "tauri-plugin-android-fix-font-size"
version = "1.0.0"
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-android-fix-font-size"
build = "build.rs"
license = "MIT OR Apache-2.0"
keywords = ["tauri", "android", "font", "size", "plugin"]
authors = ["OkaYu"]
description = "Android file system API for Tauri."
repository = "https://github.com/aiueo13/tauri-plugin-android-fix-font-size"
readme = "README.md"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tauri = { version = "2" }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }